--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+:root{
+ --main-color: #27ae60;
+ --bg-color: #f7f9fc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: "Poppins", sans-serif;
+  background-color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  max-width: 80%;
+  margin: auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+a{
+  text-decoration: none;
+  color: #000;
+  text-transform: capitalize;
+}
+ul{
+  list-style-type: none;
+}
+button{
+  border-radius: 5px;
+  padding: 17px 30px;
+  background-color: var(--main-color);
+  border:none;
+  color: #fff;
+  cursor:pointer;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+button i{
+  margin-right: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  text-align: center;
+  width: 60%;
+  margin: auto;
+}
+.heading h1{
+  color: #2f3954;
+  font-weight: 600;
+  text-transform: capitalize;
+  font-style: 35px;
+}
+.heading p {
+  color: #72809d;
+}
+textarea, input{
+  border:none;
+  outline: none;
+  background-color: none;
+}
+.background{
+  padding: 80px 0;
+  position: relative;
+  background-color: var(--bg-color);
+}
+.grid5{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+}
+label{
+  color: #2d3954;
+  font-size: 14px;
+}
+.mtop{
+  margin-top: 50px;
+}
+h4{
+  font-weight: 500;
+  margin-top: 10px;
+}
+.shadow{
+  box-shadow: 0 0 20px 0 rgb(112 121 138/ 18%);
+}
+.padding{
+  padding: 80px 0px;
+}
+.grid3{
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+img{
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+
+}
+.btn2{
+  border-radius:50px;
+  font-size: 20px;
+  /* padding: 10px; */
+}
+.grid4 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+}
+.btn4{
+  background-color: #000;
+  color: #fff;
+}
+.btn5{
+  background-color: #fff;
+  color: var(--main-color);
+  border-radius: 50px;
+  padding: 20px 40px;
+  font-style: 20px;
+  font-weight: 400;
+  border: 5px solid #27ae601f;
+}
+.back{
+  height: 40vh;
+  position: relative;
+}
+.back img{
+  height: 40vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
+}
+.back::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(17,40,72,0.629);
+  z-index: -1;
+}
+.back .container{
+  color: #fff;
+  padding: 120px 0;
+}
+.back h1{
+  font-size: 40px;
+  font-weight: 500;
+}
+.mb{
+  margin-bottom: 80px;
 }
